--- a/active-ageing/index.html
+++ b/active-ageing/index.html
@@ -506,8 +506,9 @@ const data = [
 
         // Categories for color mapping
         const eventCategories = {
-            "Cooking/Eating": ["Pan Draw", "Cutlery Cupboard", "Fridge"],
-            "Kitchen Light": ["Kitchen Light"]
+            "Cooking": ["Pan Draw", "Cutlery Cupboard", "Fridge"],
+            "Chores": ["Front Door", "Kitchen Light"]
+            "Hobbies": ["Reading"]
         };
 
         // Parsing data to group by day
