--- a/active-ageing/index.html
+++ b/active-ageing/index.html
@@ -509,6 +509,11 @@ const data = [
             "Cooking": ["Pan Draw", "Cutlery Cupboard", "Fridge"],
             "Chores": ["Front Door", "Kitchen Light"]
             "Hobbies": ["Reading"]
+        };// Categories for color mapping
+        const eventCategories = {
+            "Cooking": ["Pan Draw", "Cutlery Cupboard", "Fridge"],
+            "Chores": ["Front Door", "Kitchen Light"],
+            "Hobbies": ["Reading"]
         };
 
         // Parsing data to group by day
@@ -621,10 +626,6 @@ const data = [
         });
     </script>
   
-
-
-  <!-- Include the JavaScript file at the end of the body -->
-  <script src="heatmap.js"></script>
   <script src="../main.js"></script>
 </body>
 </html>
