--- a/active-ageing/index.html
+++ b/active-ageing/index.html
@@ -86,7 +86,9 @@
 to detect movement</p>
         </div>
     </div>
+    </div>
 
+    
      <!-- SVG Container for Heatmap -->
      <script src="https://d3js.org/d3.v7.min.js"></script>
     <style>
