--- a/active-ageing/index.html
+++ b/active-ageing/index.html
@@ -540,6 +540,9 @@ const data = [
             .attr("width", width)
             .attr("height", height);
 
+        // Tooltip element
+        const tooltip = d3.select("#tooltip");
+
         // Function to update the chart for a selected day
         function updateChart(day) {
             const eventCounts = daysData[day];
@@ -587,12 +590,20 @@ const data = [
                     .attr("y", d => y(d.count))
                     .attr("width", barWidth)
                     .attr("height", d => height - y(d.count))
-                    .attr("fill", d => colorScale(d.count));
+                    .attr("fill", d => colorScale(d.count))
+                    .on("mouseover", function(event, d) {
+                        tooltip.style("visibility", "visible")
+                               .text(`${d.event}: ${d.count}`);
+                    })
+                    .on("mousemove", function(event) {
+                        tooltip.style("top", (event.pageY + 5) + "px")
+                               .style("left", (event.pageX + 5) + "px");
+                    })
+                    .on("mouseout", function() {
+                        tooltip.style("visibility", "hidden");
+                    });
 
                 // Add labels to each bar
-                bars.append("title")  // Tooltip on hover (optional)
-                    .text(d => `${d.event}: ${d.count}`);
-
                 svg.selectAll(`.label-${category.category}`)
                     .data(category.events)
                     .enter()
