--- a/active-ageing/index.html
+++ b/active-ageing/index.html
@@ -117,6 +117,9 @@ to detect movement</p>
 
     <div id="chart"></div>
 
+    <!-- Tooltip element -->
+    <div class="tooltip" id="tooltip"></div>
+
     <script>
         // Sample input data
 const data = [
